# jiralite

./: .gitignore  Agent.md  Design.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
jiralite/: __init__.py  __main__.py  app.py  cli.py
jiralite/config/: __init__.py  settings.py
jiralite/domain/: __init__.py  exceptions.py  models.py
jiralite/services/: __init__.py  jira_client.py
jiralite/ui/: __init__.py
jiralite/ui/modals/: __init__.py  add_comment.py  help.py  history.py  issue_detail.py  transition.py
jiralite/ui/screens/: __init__.py  issue_list.py
jiralite/util/: __init__.py  formatting.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_domain_models.py  test_exceptions.py  test_formatting.py  test_services.py
